src/main/java/com/miracle/keoffor/kubernetes/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
spec:
  gatewayClassName: nginx
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      hostname: "*.kenstudy.com"
      routes:
        kind: HTTPRoute
        selector:
          matchLabels:
            app: miracle-http-route
