src/main/java/com/miracle/keoffor/kubernetes/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: miracle-http-route
  labels:
    app: miracle-http-route
spec:
  parentRefs:
    - name: gateway
  hostnames:
    - "*.kenstudy.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: miracle-client-svc
          port: 8080
